# Automated_synthesis

./: README.md
node-red/: README.md  node-red-guide.md  ui_controller.json
ros_pkgs/: README.md
ros_pkgs/ur5_interface/: CMakeLists.txt  package.xml
ros_pkgs/ur5_interface/launch/: ur_interface.launch
ros_pkgs/ur5_interface/scripts/: robot_poses.csv  service_controller.py  ur_planner.py  ur_state.py  ǵripper.py
src/: ESP_32.ino  README.md
