<?xml version="1.0"?>
<package format="2">
  <name>ur5_interface</name>
  <version>0.0.0</version>
  <description>The ur_interface package</description>

  <maintainer email="martin.jensen37@gmail.com">martin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roslaunch</build_depend>
  <export>

  </export>
</package>
